--- a/app/src/main/res/layout/sign_up_screen.xml
+++ b/app/src/main/res/layout/sign_up_screen.xml
@@ -118,6 +118,8 @@
         android:text="@string/login_prompt"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_1" />
+        app:layout_constraintTop_toBottomOf="@+id/button_1"
+        android:onClick="onClickGoLogin"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
